fixing scrollbar on sidenav - hopefully

--- a/UI/src/app/home/home.component.scss
+++ b/UI/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
 
 .mat-sidenav-container {
   background-color: transparent;
-  min-height: 800px;
+  // min-height: 800px;
 }
 
 .mat-drawer-content {
@@ -38,6 +38,7 @@ mat-card {
 
   }
 }
+
 
 
 
